src/main/parser/Parser.cpp
#include "Parser.hpp"

Parser::Parser(Lexer& lexer, bool dumpRules) : lexer(lexer), dumpRules(dumpRules) {}

void Parser::report(const std::string& rule) const {
    if (!dumpRules)
        return;
    std::cout << rule << std::endl;
}

Token Parser::match(std::initializer_list<TokenType> tokenTypes, const std::string& rule) {
    for (const auto& tokenType : tokenTypes) {
        if (auto token = lexer.match(tokenType)) {
            std::ostringstream oss;
            oss << "match " << token.value();
            report(oss.str());

            return token.value();
        }
    }

    throw ParserException(rule, lexer.peek(), tokenTypes);
}

Token Parser::match(TokenType tokenType, const std::string& rule) {
    return match({tokenType}, rule);
}

/* ----------------- Recursive descent functions ----------------- */

std::unique_ptr<ProgramASTNode> Parser::parseProgram() {
    switch (lexer.peek().getType()) {
        case TokenType::PROGRAM: {
            report("Program -> <PROGRAM> <IDENTIFIER> <SEMICOLON> Block <DOT>");
            match(TokenType::PROGRAM, "Program");
            auto identToken = match(TokenType::IDENTIFIER, "Program");
            match(TokenType::SEMICOLON, "Program");
            auto blockNode = parseBlock();
            match(TokenType::DOT, "Program");
            return std::make_unique<ProgramASTNode>(std::get<std::string>(identToken.getValue().value()),
                                                    std::move(blockNode));
        }
        default:
            throw ParserException("Program", lexer.peek(), {TokenType::PROGRAM});
    }
}

std::unique_ptr<BlockASTNode> Parser::parseBlock() {
    switch (lexer.peek().getType()) {
        case TokenType::CONST:
        case TokenType::VAR:
        case TokenType::PROCEDURE:
        case TokenType::FUNCTION:
        case TokenType::BEGIN: {
            report("Block -> BlockDecl CompoundStatement");
            std::vector<std::unique_ptr<StatementASTNode>> statementNodes;
            parseBlockDecl(statementNodes);
            statementNodes.push_back(parseCompoundStatement());
            return std::make_unique<BlockASTNode>(std::move(statementNodes));
        }
        default:
            throw ParserException(
                "Block", lexer.peek(),
                {TokenType::CONST, TokenType::VAR, TokenType::PROCEDURE, TokenType::FUNCTION, TokenType::BEGIN});
    }
}

void Parser::parseBlockDecl(std::vector<std::unique_ptr<StatementASTNode>>& statementNodes) {
    switch (lexer.peek().getType()) {
        case TokenType::CONST: {
            report("BlockDecl ⟶ ConstantDefinitionList BlockDecl");
            parseConstantDefinitionList(statementNodes);
            parseBlockDecl(statementNodes);
            break;
        }
        case TokenType::VAR: {
            report("BlockDecl ⟶ VariableDeclarationList BlockDecl");
            parseVariableDeclarationList(statementNodes);
            parseBlockDecl(statementNodes);
            break;
        }
        case TokenType::PROCEDURE: {
            report("BlockDecl ⟶ ProcedureDeclaration BlockDecl");
            parseProcedureDeclaration(statementNodes);
            parseBlockDecl(statementNodes);
            break;
        }
        case TokenType::FUNCTION: {
            report("BlockDecl ⟶ FunctionDeclaration BlockDecl");
            parseFunctionDeclaration(statementNodes);
            parseBlockDecl(statementNodes);
            break;
        }
        case TokenType::BEGIN: {
            report("BlockDecl ->");
            break;
        }
        default:
            throw ParserException(
                "BlockDecl", lexer.peek(),
                {TokenType::CONST, TokenType::VAR, TokenType::PROCEDURE, TokenType::FUNCTION, TokenType::BEGIN});
    }
}

Token Parser::parseUnsignedNumber() {
    switch (lexer.peek().getType()) {
        case TokenType::INTEGER_LITERAL: {
            report("UnsignedNumber -> <INTEGER_LITERAL>");
            return match(TokenType::INTEGER_LITERAL, "UnsignedNumber");
        }
        case TokenType::REAL_LITERAL: {
            report("UnsignedNumber -> <REAL_LITERAL>");
            return match(TokenType::REAL_LITERAL, "UnsignedNumber");
        }
        default:
            throw ParserException("UnsignedNumber", lexer.peek(),
                                  {TokenType::REAL_LITERAL, TokenType::INTEGER_LITERAL});
    }
}

std::unique_ptr<TypeASTNode> Parser::parseType() {
    switch (lexer.peek().getType()) {
        case TokenType::INTEGER:
        case TokenType::REAL: {
            report("Type -> PrimitiveType");
            return parsePrimitiveType();
        }
        case TokenType::ARRAY: {
            report("Type -> ArrayType");
            return parseArrayType();
        }
        default:
            throw ParserException("Type", lexer.peek(), {TokenType::REAL, TokenType::INTEGER, TokenType::ARRAY});
    }
}

std::unique_ptr<PrimitiveTypeASTNode> Parser::parsePrimitiveType() {
    switch (lexer.peek().getType()) {
        case TokenType::REAL: {
            report("PrimitiveType -> <REAL>");
            match(TokenType::REAL, "PrimitiveType");
            return std::make_unique<PrimitiveTypeASTNode>(PrimitiveTypeASTNode::PrimitiveType::REAL);
        }
        case TokenType::INTEGER: {
            report("PrimitiveType -> <INTEGER>");
            match(TokenType::INTEGER, "PrimitiveType");
            return std::make_unique<PrimitiveTypeASTNode>(PrimitiveTypeASTNode::PrimitiveType::INTEGER);
        }
        default:
            throw ParserException("PrimitiveType", lexer.peek(), {TokenType::REAL, TokenType::INTEGER});
    }
}

std::unique_ptr<ArrayTypeASTNode> Parser::parseArrayType() {
    switch (lexer.peek().getType()) {
        case TokenType::ARRAY: {
            report(
                "ArrayType -> <ARRAY> <LEFT_BRACKET> SignedInteger <DOUBLE_DOT> SignedInteger <RIGHT_BRACKET> <OF> "
                "SimpleType");
            match(TokenType::ARRAY, "ArrayType");
            match(TokenType::LEFT_BRACKET, "ArrayType");
            auto lowerBound = parseSignedInteger();
            match(TokenType::DOUBLE_DOT, "ArrayType");
            auto upperBound = parseSignedInteger();
            match(TokenType::RIGHT_BRACKET, "ArrayType");
            match(TokenType::OF, "ArrayType");
            auto typeNode = parsePrimitiveType();
            return std::make_unique<ArrayTypeASTNode>(std::move(typeNode), lowerBound, upperBound);
        }
        default:
            throw ParserException("ArrayType", lexer.peek(), {TokenType::ARRAY});
    }
}

int Parser::parseSignedInteger() {
    switch (lexer.peek().getType()) {
        case TokenType::INTEGER_LITERAL: {
            report("SignedInteger -> <INTEGER_LITERAL>");
            auto intToken = match(TokenType::INTEGER_LITERAL, "SignedInteger");
            int value = std::get<int>(intToken.getValue().value());
            return value;
        }
        case TokenType::MINUS: {
            report("SignedInteger -> <MINUS> <INTEGER_LITERAL>");
            match(TokenType::MINUS, "SignedInteger");
            auto intToken = match(TokenType::INTEGER_LITERAL, "SignedInteger");
            int value = std::get<int>(intToken.getValue().value());
            return -value;
        }
        default:
            throw ParserException("SignedInteger", lexer.peek(), {TokenType::INTEGER_LITERAL, TokenType::MINUS});
    }
}

void Parser::parseConstantDefinitionList(std::vector<std::unique_ptr<StatementASTNode>>& statementNodes) {
    switch (lexer.peek().getType()) {
        case TokenType::CONST: {
            report("ConstantDefinitionList -> <CONST> ConstantDefinition ConstantDefinitionListR");
            match(TokenType::CONST, "ConstantDefinitionList");
            parseConstantDefinition(statementNodes);
            parseConstantDefinitionListR(statementNodes);
            break;
        }
        default:
            throw ParserException("ConstantDefinitionList", lexer.peek(), {TokenType::CONST});
    }
}

void Parser::parseConstantDefinitionListR(std::vector<std::unique_ptr<StatementASTNode>>& statementNodes) {
    switch (lexer.peek().getType()) {
        case TokenType::IDENTIFIER: {
            report("ConstantDefinitionListR -> ConstantDefinition ConstantDefinitionListR");
            parseConstantDefinition(statementNodes);
            parseConstantDefinitionListR(statementNodes);
            break;
        }
        case TokenType::CONST:
        case TokenType::VAR:
        case TokenType::PROCEDURE:
        case TokenType::FUNCTION:
        case TokenType::BEGIN: {
            report("ConstantDefinitionListR ->");
            break;
        }
        default:
            throw ParserException("ConstantDefinitionListR", lexer.peek(),
                                  {TokenType::IDENTIFIER, TokenType::CONST, TokenType::VAR, TokenType::PROCEDURE,
                                   TokenType::FUNCTION, TokenType::BEGIN});
    }
}

void Parser::parseConstantDefinition(std::vector<std::unique_ptr<StatementASTNode>>& statementNodes) {
    switch (lexer.peek().getType()) {
        case TokenType::IDENTIFIER: {
            report("ConstantDefinition -> <IDENTIFIER> <EQUAL> Expression <SEMICOLON>");
            auto identToken = match(TokenType::IDENTIFIER, "ConstantDefinition");
            match(TokenType::EQUAL, "ConstantDefinition");
            auto exprNode = parseExpression();
            match(TokenType::SEMICOLON, "ConstantDefinition");
            auto constDefNode = std::make_unique<ConstDefASTNode>(std::get<std::string>(identToken.getValue().value()),
                                                                  std::move(exprNode));
            statementNodes.push_back(std::move(constDefNode));
            break;
        }
        default:
            throw ParserException("ConstantDefinition", lexer.peek(), {TokenType::IDENTIFIER});
    }
}

void Parser::parseVariableDeclarationList(std::vector<std::unique_ptr<StatementASTNode>>& statementNodes) {
    switch (lexer.peek().getType()) {
        case TokenType::VAR: {
            report("VariableDeclarationList -> <VAR> VariableDeclarationGroup VariableDeclarationListR");
            match(TokenType::VAR, "VariableDeclarationList");
            parseVariableDeclarationGroup(statementNodes);
            parseVariableDeclarationListR(statementNodes);
            break;
        }
        default:
            throw ParserException("VariableDeclarationList", lexer.peek(), {TokenType::VAR});
    }
}

void Parser::parseVariableDeclarationListR(std::vector<std::unique_ptr<StatementASTNode>>& statementNodes) {
    switch (lexer.peek().getType()) {
        case TokenType::IDENTIFIER: {
            report("VariableDeclarationListR -> VariableDeclarationGroup VariableDeclarationListR");
            parseVariableDeclarationGroup(statementNodes);
            parseVariableDeclarationListR(statementNodes);
            break;
        }
        case TokenType::CONST:
        case TokenType::VAR:
        case TokenType::PROCEDURE:
        case TokenType::FUNCTION:
        case TokenType::BEGIN: {
            report("VariableDeclarationListR ->");
            break;
        }
        default:
            throw ParserException("VariableDeclarationListR", lexer.peek(),
                                  {TokenType::IDENTIFIER, TokenType::CONST, TokenType::VAR, TokenType::PROCEDURE,
                                   TokenType::FUNCTION, TokenType::BEGIN});
    }
}

void Parser::parseVariableDeclarationGroup(std::vector<std::unique_ptr<StatementASTNode>>& statementNodes) {
    switch (lexer.peek().getType()) {
        case TokenType::IDENTIFIER: {
            report("VariableDeclarationGroup -> IdentifierList <COLON> Type <SEMICOLON>");
            auto idents = parseIdentifierList();
            match(TokenType::COLON, "VariableDeclarationGroup");
            auto commonTypeNode = parseType();
            for (const auto& ident : idents)
                statementNodes.push_back(commonTypeNode->createDeclNode(ident));
            match(TokenType::SEMICOLON, "VariableDeclarationGroup");
            break;
        }
        default:
            throw ParserException("VariableDeclarationGroup", lexer.peek(), {TokenType::IDENTIFIER});
    }
}

std::vector<std::string> Parser::parseIdentifierList() {
    switch (lexer.peek().getType()) {
        case TokenType::IDENTIFIER: {
            report("IdentifierList -> <IDENTIFIER> IdentifierListR");
            auto identToken = match(TokenType::IDENTIFIER, "IdentifierList");
            std::vector<std::string> idents;
            idents.push_back(std::get<std::string>(identToken.getValue().value()));
            parseIdentifierListR(idents);
            return idents;
        }
        default:
            throw ParserException("IdentifierList", lexer.peek(), {TokenType::IDENTIFIER});
    }
}

void Parser::parseIdentifierListR(std::vector<std::string>& identifiers) {
    switch (lexer.peek().getType()) {
        case TokenType::COMMA: {
            report("IdentifierListR -> <COMMA> <IDENTIFIER> IdentifierListR");
            match(TokenType::COMMA, "IdentifierListR");
            auto identToken = match(TokenType::IDENTIFIER, "IdentifierListR");
            identifiers.push_back(std::get<std::string>(identToken.getValue().value()));
            parseIdentifierListR(identifiers);
            break;
        }
        case TokenType::COLON: {
            report("IdentifierListR ->");
            break;
        }
        default:
            throw ParserException("IdentifierListR", lexer.peek(), {TokenType::COMMA, TokenType::COLON});
    }
}

void Parser::parseProcedureDeclaration(std::vector<std::unique_ptr<StatementASTNode>>& statementNodes) {
    switch (lexer.peek().getType()) {
        case TokenType::PROCEDURE: {
            report(
                "ProcedureDeclaration -> <PROCEDURE> <IDENTIFIER> FunctionParameters <SEMICOLON> "
                "BodyOrForward <SEMICOLON>");
            match(TokenType::PROCEDURE, "ProcedureDeclaration");
            auto identToken = match(TokenType::IDENTIFIER, "ProcedureDeclaration");
            auto paramNodes = parseFunctionParameters();
            match(TokenType::SEMICOLON, "ProcedureDeclaration");
            auto optBlockNode = parseBodyOrForward();
            statementNodes.push_back(std::make_unique<ProcDeclASTNode>(
                std::get<std::string>(identToken.getValue().value()), std::move(paramNodes), std::move(optBlockNode)));
            match(TokenType::SEMICOLON, "ProcedureDeclaration");
            break;
        }
        default:
            throw ParserException("ProcedureDeclaration", lexer.peek(), {TokenType::PROCEDURE});
    }
}

void Parser::parseFunctionDeclaration(std::vector<std::unique_ptr<StatementASTNode>>& statementNodes) {
    switch (lexer.peek().getType()) {
        case TokenType::FUNCTION: {
            report(
                "FunctionDeclaration -> <FUNCTION> <IDENTIFIER> FunctionParameters <COLON> PrimitiveType "
                "<SEMICOLON> "
                "BodyOrForward <SEMICOLON>");
            match(TokenType::FUNCTION, "FunctionDeclaration");
            auto identToken = match(TokenType::IDENTIFIER, "FunctionDeclaration");
            auto paramNodes = parseFunctionParameters();
            match(TokenType::COLON, "FunctionDeclaration");
            auto retPrimitiveTypeNode = parsePrimitiveType();
            match(TokenType::SEMICOLON, "FunctionDeclaration");
            auto optBlockNode = parseBodyOrForward();
            statementNodes.push_back(std::make_unique<FunDeclASTNode>(
                std::get<std::string>(identToken.getValue().value()), std::move(paramNodes), std::move(optBlockNode),
                std::move(retPrimitiveTypeNode)));
            match(TokenType::SEMICOLON, "FunctionDeclaration");
            break;
        }
        default:
            throw ParserException("FunctionDeclaration", lexer.peek(), {TokenType::FUNCTION});
    }
}

std::vector<std::unique_ptr<VarDeclASTNode>> Parser::parseFunctionParameters() {
    switch (lexer.peek().getType()) {
        case TokenType::LEFT_PAREN: {
            report("FunctionParameters -> <LEFT_PAREN> FormalParameterList <RIGHT_PAREN>");
            match(TokenType::LEFT_PAREN, "FunctionDeclaration");
            auto paramNodes = parseFormalParameterList();
            match(TokenType::RIGHT_PAREN, "FunctionDeclaration");
            return paramNodes;
        }
        default:
            throw ParserException("FunctionParameters", lexer.peek(), {TokenType::LEFT_PAREN});
    }
}

std::vector<std::unique_ptr<VarDeclASTNode>> Parser::parseFormalParameterList() {
    switch (lexer.peek().getType()) {
        case TokenType::IDENTIFIER: {
            report("FormalParameterList -> ParameterGroup FormalParameterListR");
            std::vector<std::unique_ptr<VarDeclASTNode>> paramNodes;
            parseParameterGroup(paramNodes);
            parseFormalParameterListR(paramNodes);
            return paramNodes;
        }
        case TokenType::RIGHT_PAREN: {
            report("FormalParameterList ->");
            return {};
        }
        default:
            throw ParserException("FormalParameterList", lexer.peek(), {TokenType::IDENTIFIER, TokenType::RIGHT_PAREN});
    }
}

void Parser::parseFormalParameterListR(std::vector<std::unique_ptr<VarDeclASTNode>>& parameterNodes) {
    switch (lexer.peek().getType()) {
        case TokenType::SEMICOLON: {
            report("FormalParameterListR -> <SEMICOLON> ParameterGroup FormalParameterListR");
            match(TokenType::SEMICOLON, "FormalParameterListR");
            parseParameterGroup(parameterNodes);
            parseFormalParameterListR(parameterNodes);
            break;
        }
        case TokenType::RIGHT_PAREN: {
            report("FormalParameterListR ->");
            break;
        }
        default:
            throw ParserException("FormalParameterListR", lexer.peek(), {TokenType::SEMICOLON, TokenType::RIGHT_PAREN});
    }
}

void Parser::parseParameterGroup(std::vector<std::unique_ptr<VarDeclASTNode>>& parameterNodes) {
    switch (lexer.peek().getType()) {
        case TokenType::IDENTIFIER: {
            report("ParameterGroup -> IdentifierList <COLON> PrimitiveType");
            auto idents = parseIdentifierList();
            match(TokenType::COLON, "ParameterGroup");
            auto commonTypeNode = parsePrimitiveType();
            for (const auto& ident : idents) {
                auto typeNode = std::make_unique<PrimitiveTypeASTNode>(commonTypeNode->getPrimitiveType());
                parameterNodes.push_back(std::make_unique<VarDeclASTNode>(ident, std::move(typeNode)));
            }
            break;
        }
        default:
            throw ParserException("ParameterGroup", lexer.peek(), {TokenType::IDENTIFIER});
    }
}

std::optional<std::unique_ptr<BlockASTNode>> Parser::parseBodyOrForward() {
    switch (lexer.peek().getType()) {
        case TokenType::FORWARD: {
            report("BodyOrForward -> <FORWARD>");
            match(TokenType::FORWARD, "BodyOrForward");
            return std::nullopt;
        }
        case TokenType::BEGIN:
        case TokenType::CONST:
        case TokenType::VAR: {
            report("BodyOrForward -> Body");
            return parseBody();
        }
        default:
            throw ParserException("BodyOrForward", lexer.peek(),
                                  {TokenType::FORWARD, TokenType::BEGIN, TokenType::CONST, TokenType::VAR});
    }
}

std::unique_ptr<BlockASTNode> Parser::parseBody() {
    switch (lexer.peek().getType()) {
        case TokenType::CONST:
        case TokenType::VAR:
        case TokenType::BEGIN: {
            report("Body -> BodyDecl CompoundStatement");
            std::vector<std::unique_ptr<StatementASTNode>> statementNodes;
            parseBodyDecl(statementNodes);
            statementNodes.push_back(parseCompoundStatement());
            return std::make_unique<BlockASTNode>(std::move(statementNodes));
        }
        default:
            throw ParserException("Body", lexer.peek(), {TokenType::BEGIN, TokenType::CONST, TokenType::VAR});
    }

}

void Parser::parseBodyDecl(std::vector<std::unique_ptr<StatementASTNode>>& statementNodes) {
    switch (lexer.peek().getType()) {
        case TokenType::CONST: {
            report("BodyDecl -> ConstantDefinitionList BodyDecl");
            parseConstantDefinitionList(statementNodes);
            parseBodyDecl(statementNodes);
            break;
        }
        case TokenType::VAR: {
            report("BodyDecl -> VariableDeclarationList BodyDecl");
            parseVariableDeclarationList(statementNodes);
            parseBodyDecl(statementNodes);
            break;
        }
        case TokenType::BEGIN: {
            report("BodyDecl ->");
            break;
        }
        default:
            throw ParserException("BodyDecl", lexer.peek(), {TokenType::CONST, TokenType::VAR, TokenType::BEGIN});
    }
}

std::unique_ptr<StatementASTNode> Parser::parseStatement() {
    switch (lexer.peek().getType()) {
        case TokenType::EXIT:
        case TokenType::BREAK:
        case TokenType::IDENTIFIER:
        case TokenType::SEMICOLON:
        case TokenType::END:
        case TokenType::ELSE: {
            report("Statement -> SimpleStatement");
            return parseSimpleStatement();
        }
        case TokenType::BEGIN:
        case TokenType::IF:
        case TokenType::WHILE:
        case TokenType::FOR: {
            report("Statement -> ComplexStatement");
            return parseComplexStatement();
        }
        default:
            throw ParserException(
                "Statement", lexer.peek(),
                {TokenType::ELSE, TokenType::BREAK, TokenType::SEMICOLON, TokenType::EXIT, TokenType::IDENTIFIER,
                 TokenType::BEGIN, TokenType::IF, TokenType::FOR, TokenType::WHILE, TokenType::END});
    }
}

std::unique_ptr<StatementASTNode> Parser::parseSimpleStatement() {
    switch (lexer.peek().getType()) {
        case TokenType::ELSE:
        case TokenType::END:
        case TokenType::SEMICOLON: {
            report("SimpleStatement -> EmptyStatement");
            return parseEmptyStatement();
        }
        case TokenType::EXIT: {
            report("SimpleStatement -> <EXIT>");
            match(TokenType::EXIT, "SimpleStatement");
            return std::make_unique<ExitASTNode>();
        }
        case TokenType::BREAK: {
            report("SimpleStatement -> <BREAK>");
            match(TokenType::BREAK, "SimpleStatement");
            return std::make_unique<BreakASTNode>();
        }
        case TokenType::IDENTIFIER: {
            report("SimpleStatement -> <IDENTIFIER> SimpleStatementIdentifierContinuation");
            auto identifierToken = match(TokenType::IDENTIFIER, "SimpleStatement");
            return parseSimpleStatementIdentifierContinuation(
                std::get<std::string>(identifierToken.getValue().value()));
        }
        default:
            throw ParserException("SimpleStatement", lexer.peek(),
                                  {TokenType::ELSE, TokenType::END, TokenType::BREAK, TokenType::SEMICOLON,
                                   TokenType::EXIT, TokenType::IDENTIFIER});
    }
}

std::unique_ptr<StatementASTNode> Parser::parseSimpleStatementIdentifierContinuation(const std::string& identifier) {
    switch (lexer.peek().getType()) {
        case TokenType::LEFT_PAREN: {
            report("SimpleStatementIdentifierContinuation -> FunctionArgs");
            return std::make_unique<ProcCallASTNode>(identifier, parseFunctionArgs());
        }
        case TokenType::LEFT_BRACKET:
        case TokenType::ASSIGN: {
            report("SimpleStatementIdentifierContinuation -> OptionalArrayAccess <ASSIGN> Expression");
            auto arrayRefNode = parseOptionalArrayAccess(identifier);
            match(TokenType::ASSIGN, "SimpleStatementIdentifierContinuation");
            if (arrayRefNode)
                return std::make_unique<AssignASTNode>(std::move(arrayRefNode), parseExpression());
            else
                return std::make_unique<AssignASTNode>(std::make_unique<DeclVarRefASTNode>(identifier),
                                                       parseExpression());
        }
        default:
            throw ParserException("SimpleStatementIdentifierContinuation", lexer.peek(),
                                  {TokenType::ASSIGN, TokenType::LEFT_BRACKET, TokenType::LEFT_PAREN});
    }
}

std::unique_ptr<DeclArrayRefASTNode> Parser::parseOptionalArrayAccess(const std::string& identifier) {
    switch (lexer.peek().getType()) {
        case TokenType::LEFT_BRACKET: {
            report("OptionalArrayAccess -> ArrayAccess");
            return parseArrayAccess(identifier);
        }
        case TokenType::ASSIGN: {
            report("OptionalArrayAccess ->");
            return nullptr;
        }
        default:
            throw ParserException("ArrayAccess", lexer.peek(), {TokenType::LEFT_BRACKET, TokenType::ASSIGN});
    }
}

std::unique_ptr<DeclArrayRefASTNode> Parser::parseArrayAccess(const std::string& identifier) {
    switch (lexer.peek().getType()) {
        case TokenType::LEFT_BRACKET: {
            report("ArrayAccess -> <LEFT_BRACKET> Expression <RIGHT_BRACKET>");
            match(TokenType::LEFT_BRACKET, "ArrayAccess");
            auto indexNode = parseExpression();
            match(TokenType::RIGHT_BRACKET, "ArrayAccess");
            return std::make_unique<DeclArrayRefASTNode>(identifier, std::move(indexNode));
        }
        default:
            throw ParserException("ArrayAccess", lexer.peek(), {TokenType::LEFT_BRACKET});
    }
}

std::unique_ptr<StatementASTNode> Parser::parseEmptyStatement() {
    switch (lexer.peek().getType()) {
        case TokenType::ELSE:
        case TokenType::END:
        case TokenType::SEMICOLON: {
            report("EmptyStatement ->");
            return std::make_unique<EmptyStmtASTNode>();
        }
        default:
            throw ParserException("EmptyStatement", lexer.peek(),
                                  {TokenType::ELSE, TokenType::SEMICOLON, TokenType::END});
    }
}

std::unique_ptr<StatementASTNode> Parser::parseComplexStatement() {
    switch (lexer.peek().getType()) {
        case TokenType::BEGIN: {
            report("ComplexStatement -> CompoundStatement");
            return parseCompoundStatement();
        }
        case TokenType::IF: {
            report("ComplexStatement -> IfStatement");
            return parseIfStatement();
        }
        case TokenType::WHILE: {
            report("ComplexStatement -> WhileStatement");
            return parseWhileStatement();
        }
        case TokenType::FOR: {
            report("ComplexStatement -> ForStatement");
            return parseForStatement();
        }
        default:
            throw ParserException("ComplexStatement", lexer.peek(),
                                  {TokenType::BEGIN, TokenType::IF, TokenType::FOR, TokenType::WHILE});
    }
}

std::unique_ptr<CompoundStmtASTNode> Parser::parseCompoundStatement() {
    switch (lexer.peek().getType()) {
        case TokenType::BEGIN: {
            report("CompoundStatement -> <BEGIN> Statement CompoundStatementR <END>");
            std::vector<std::unique_ptr<StatementASTNode>> statementNodes;
            match(TokenType::BEGIN, "CompoundStatement");
            statementNodes.push_back(parseStatement());
            parseCompoundStatementR(statementNodes);
            match(TokenType::END, "CompoundStatement");
            return std::make_unique<CompoundStmtASTNode>(std::move(statementNodes));
        }
        default:
            throw ParserException("CompoundStatement", lexer.peek(), {TokenType::BEGIN});
    }
}

void Parser::parseCompoundStatementR(std::vector<std::unique_ptr<StatementASTNode>>& statementNodes) {
    switch (lexer.peek().getType()) {
        case TokenType::SEMICOLON: {
            report("CompoundStatementR -> <SEMICOLON> Statement CompoundStatementR");
            match(TokenType::SEMICOLON, "CompoundStatementR");
            statementNodes.push_back(parseStatement());
            parseCompoundStatementR(statementNodes);
            break;
        }
        case TokenType::END: {
            report("CompoundStatementR ->");
            break;
        }
        default:
            throw ParserException("CompoundStatementR", lexer.peek(), {TokenType::SEMICOLON, TokenType::END});
    }
}
